# learn-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
diy-synth/: Cargo.toml  LICENSE  README.md
slot-machine/: Cargo.toml  LICENSE  README.md
slot-machine/data/: display_symbols.json
slot-machine/data/blaze7/: display.csv  reels.csv  symbols.csv
slot-machine/data/games/blaze7/: display.csv  paytable.csv
slot-machine/data/games/generic/: display.csv  paytable.csv  symbols.csv
slot-machine/data/generic/: reels.csv
slot-machine/data/symbols/: SOURCES.md
slot-machine/docs/: slot_machine.md
slot-machine/src/: lib.rs  main.rs  par_table.rs  protocol.rs  utils.rs
slot_machine/: Cargo.toml  README.md
