[package]
authors = ["Etienne Donneger"]
description = "A TUI slot machine implementation"
edition = "2021"
license-file = "LICENSE"
name = "diy-synth"
publish = false
readme = "README.md"
repository = "https://github.com/Krow10/learn-rust/diy-synth"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
