[package]
authors = ["Etienne Donneger"]
description = "A TUI slot machine implementation"
edition = "2021"
license-file = "LICENSE"
name = "slot-machine"
publish = false
readme = "README.md"
repository = "https://github.com/Krow10/learn-rust/slot-machine"
version = "0.1.0"

[dependencies]
csv = "1.3.0"
itertools = "0.11.0"
rand = "0.8.5"
