[package]
authors = ["Etienne Donneger"]
description = "A TUI slot machine implementation"
edition = "2021"
license-file = "LICENSE"
name = "slot-machine"
publish = false
readme = "README.md"
repository = "https://github.com/Krow10/learn-rust/slot-machine"
version = "0.1.0"

[dependencies]
ansi-to-tui = "3.1.0"
anyhow = "1.0.75"
cfonts = "1.1.2"
crossterm = "0.27.0"
csv = "1.3.0"
ctrlc = "3.4.1"
image = "0.24.7"
itertools = "0.11.0"
rand = "0.8.5"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
serde = "1.0.190"
serde_json = "1.0.107"
serde_with = "3.4.0"
