[package]
authors = ["Etienne Donneger"]
description = "A TUI slot machine implementation"
edition = "2021"
license-file = "LICENSE"
name = "slot_machine"
publish = false
readme = "README.md"
repository = "https://github.com/Krow10/learn-rust/slot_machine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
